--- a/science.html
+++ b/science.html
@@ -25,19 +25,20 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>1</td><td>Periodic Test 1</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>2</td><td>Periodic Test 2</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>3</td><td>Periodic Test 3</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>4</td><td>Term Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>5</td><td>Class Test 1</td><td><a href="nofile.html">Open</a></td><td>20</td></tr>
-        <tr><td>6</td><td>Class Test 2</td><td><a href="nofile.html">Open</a></td><td>20</td></tr>
-        <tr><td>7</td><td>Split 1</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>8</td><td>Split 2</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>9</td><td>Revision 1</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>10</td><td>Revision 2</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>11</td><td>Model Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>12</td><td>Pre-Board Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>13</td><td><b>BOARD EXAMINATION</b></td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
+        <tr><td>1</td><td>Periodic Test 1</td><td><a href="https://drive.google.com/file/d/1aRr8vrM-tR39oiogYRA89eLQ40t27oGu/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>2</td><td>Periodic Test 2</td><td><a href="https://drive.google.com/file/d/1f14uiQovmLxMOTfgprQQ5T9OBWWmuRbr/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>3</td><td>Periodic Test 3</td><td><a href="https://drive.google.com/file/d/1E97pxefFoLZH9U2Gds-286dYYb3Zp30-/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>4</td><td>Term Examination</td><td><a href="https://drive.google.com/file/d/1v_WptFWrpS7fnYxJwauz_3xfzP-smphM/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>5</td><td>Class Test 1</td><td><a href="https://drive.google.com/file/d/1FFxG6TaJXjTS-SX_C6MnOTyIl8_4H7V1/view?usp=drive_link" target="blank">Open</a></td><td>20</td></tr>
+        <tr><td>6</td><td>Class Test 2</td><td><a href="https://drive.google.com/file/d/1GCv6otfMS2c6Kl0zmHzSzIX7q0eCbdYR/view?usp=drive_link" target="blank">Open</a></td><td>20</td></tr>
+        <tr><td>7</td><td>Class Test 3</td><td><a href="https://drive.google.com/file/d/1ANXKxQ693qVG90V0DaVq-YBhPT1YnkTB/view?usp=drive_link" target="blank">Open</a></td><td>20</td></tr>
+        <tr><td>8</td><td>Split 1</td><td><a href="https://drive.google.com/file/d/1znbOStpu68oT3geCgDPY0GgmKY59A6H0/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>9</td><td>Split 2</td><td><a href="https://drive.google.com/file/d/1Jx-ngl0aKVgCmE6lRL6DesfOEUtzYZEK/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>10</td><td>Revision 1</td><td><a href="https://drive.google.com/file/d/163JLbUxE6qalL84F12R-Jqqka8W6msk3/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>11</td><td>Revision 2</td><td><a href="https://drive.google.com/file/d/1Qf7BlYLc2wqBzOaB2GYGuXxgP8gujQsZ/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>12</td><td>Model Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
+        <tr><td>13</td><td>Pre-Board Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
+        <tr><td>14</td><td><b>BOARD EXAMINATION</b></td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
       </tbody>
     </table>
   </div>
