--- a/science.html
+++ b/science.html
@@ -36,9 +36,9 @@
         <tr><td>9</td><td>Split 2</td><td><a href="https://drive.google.com/file/d/1Jx-ngl0aKVgCmE6lRL6DesfOEUtzYZEK/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
         <tr><td>10</td><td>Revision 1</td><td><a href="https://drive.google.com/file/d/163JLbUxE6qalL84F12R-Jqqka8W6msk3/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
         <tr><td>11</td><td>Revision 2</td><td><a href="https://drive.google.com/file/d/1Qf7BlYLc2wqBzOaB2GYGuXxgP8gujQsZ/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
-        <tr><td>12</td><td>Model Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>13</td><td>Pre-Board Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>14</td><td><b>BOARD EXAMINATION</b></td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
+        <tr><td>12</td><td>Model Examination</td><td><a href="https://drive.google.com/file/d/1Gd9eiPYvBhlX3XVnKfeBXTz50h57-k7j/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>13</td><td>Pre-Board Examination</td><td><a href="https://drive.google.com/file/d/106VXEO8y5pYjLiy0xZ27M9j1eHXPWhMu/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>14</td><td><b>BOARD EXAMINATION</b></td><td><a href="https://drive.google.com/file/d/1z7NDoQB5MJMCp6AGFicuTcK8GtUMiA09/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
       </tbody>
     </table>
   </div>
