--- a/maths.html
+++ b/maths.html
@@ -25,19 +25,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>1</td><td>Periodic Test 1</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>2</td><td>Periodic Test 2</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>3</td><td>Periodic Test 3</td><td><a href="nofile.html">Open</a></td><td>40</td></tr>
-        <tr><td>4</td><td>Term Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>5</td><td>Class Test 1</td><td><a href="nofile.html">Open</a></td><td>20</td></tr>
-        <tr><td>6</td><td>Class Test 2</td><td><a href="nofile.html">Open</a></td><td>20</td></tr>
-        <tr><td>7</td><td>Split 1</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>8</td><td>Split 2</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>9</td><td>Revision 1</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>10</td><td>Revision 2</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>11</td><td>Model Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>12</td><td>Pre-Board Examination</td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
-        <tr><td>13</td><td><b>BOARD EXAMINATION</b></td><td><a href="nofile.html">Open</a></td><td>80</td></tr>
+        <tr><td>1</td><td>Periodic Test 1</td><td><a href="https://drive.google.com/file/d/1cAuoPJRLjSOEnBpFNCKRjiSA9EBKe1Yq/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>2</td><td>Periodic Test 2</td><td><a href="https://drive.google.com/file/d/1-x33lq_aauHMbKK-ferKurrABF9JN_qq/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>3</td><td>Periodic Test 3</td><td><a href="https://drive.google.com/file/d/1T22BAe24QDj-oEEpkVonlQNTu54Zy-QP/view?usp=drive_link" target="blank">Open</a></td><td>40</td></tr>
+        <tr><td>4</td><td>Term Examination</td><td><a href="https://drive.google.com/file/d/1RAL4yFmxFWDulgrcAjopAr1_aTiGkpNK/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>5</td><td>Class Test 1</td><td><a href="https://drive.google.com/file/d/1RwIzZj_oTLY1YT543orLI6gR8LdEkeIY/view?usp=drive_link" target="blank">Open</a></td><td>20</td></tr>
+        <tr><td>6</td><td>Class Test 2</td><td><a href="https://drive.google.com/file/d/1cOA9R8jRSPJ3Lcl1LVm22uPVQtFEr8WX/view?usp=drive_link" target="blank">Open</a></td><td>20</td></tr>
+        <tr><td>7</td><td>Split 1</td><td><a href=https://drive.google.com/file/d/1xNqfC9R6MNRQEGRnqIgs6i30VO1_MSPw/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>8</td><td>Split 2</td><td><a href="https://drive.google.com/file/d/1soUOnsIypK_HeTeUu2jFcclGOKQ7QNoS/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>9</td><td>Revision 1</td><td><a href="https://drive.google.com/file/d/1qwBwfpRRbUyHJaot2h93k1dxzgW4FWoI/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>10</td><td>Revision 2</td><td><a href="https://drive.google.com/file/d/16GTFaHz-fhhKfIVx_bhnReFksZnD4mQ8/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>11</td><td>Model Examination</td><td><a href="https://drive.google.com/file/d/1QCk91MPZZReI9iIrfzkfeTxAVVf9X4-B/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>12</td><td>Pre-Board Examination</td><td><a href="https://drive.google.com/file/d/1AK3VlBhvHcOOhFAi3y8o6VVfUveiCKkE/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
+        <tr><td>13</td><td><b>BOARD EXAMINATION</b></td><td><a href="https://drive.google.com/file/d/18JkU1B8GB5JyO_vFtNksdP6m5dqlPiGS/view?usp=drive_link" target="blank">Open</a></td><td>80</td></tr>
       </tbody>
     </table>
   </div>
