--- a/english.html
+++ b/english.html
@@ -25,13 +25,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>1</td><td>Periodic Test 1</td><td><a href="nofile.html" target="_blank">Open</a></td><td>40</td></tr>
-        <tr><td>2</td><td>Periodic Test 2</td><td><a href="nofile.html" target="_blank">Open</a></td><td>40</td></tr>
-        <tr><td>3</td><td>Periodic Test 3</td><td><a href="nofile.html" target="_blank">Open</a></td><td>40</td></tr>
-        <tr><td>4</td><td>Term Examination</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>5</td><td>Split 1</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>6</td><td>Split 2</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>7</td><td>Revision 1</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>1</td><td>Periodic Test 1</td><td><a href="https://drive.google.com/file/d/1mVtmh_hbNHrB9iCa5vS4VwsRI81Ych38/view?usp=drive_link" target="_blank">Open</a></td><td>40</td></tr>
+        <tr><td>2</td><td>Periodic Test 2</td><td><a href="https://drive.google.com/file/d/13djJsZWtebJcUDUUqlgQl3-P_Fe9LXYl/view?usp=drive_link" target="_blank">Open</a></td><td>40</td></tr>
+        <tr><td>3</td><td>Periodic Test 3</td><td><a href="https://drive.google.com/file/d/1um3PBx5wW8t5NKIfRo46AP86G8e1J2Xb/view?usp=drive_link" target="_blank">Open</a></td><td>40</td></tr>
+        <tr><td>4</td><td>Term Examination</td><td><a href="https://drive.google.com/file/d/12eIEiKEA49CcgMX_kZ9HoOREQyVHYkka/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>5</td><td>Split 1</td><td><a href="https://drive.google.com/file/d/1IHg9I_dPHgNuAHHZZ4rOZYB-9dGRe4Dw/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>6</td><td>Split 2</td><td><a href="https://drive.google.com/file/d/1HflBCTgJ_BgnnfWdgv4LxMH6g2OBKCsx/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>7</td><td>Revision 1</td><td><a href="https://drive.google.com/file/d/1pEn6GjBwVtWn7wz6N9q5MN8ZV-X_Ezao/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
         <tr><td>8</td><td>Revision 2</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
         <tr><td>9</td><td>Model Examination</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
         <tr><td>10</td><td>Pre-Board Examination</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
