--- a/english.html
+++ b/english.html
@@ -32,10 +32,10 @@
         <tr><td>5</td><td>Split 1</td><td><a href="https://drive.google.com/file/d/1IHg9I_dPHgNuAHHZZ4rOZYB-9dGRe4Dw/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
         <tr><td>6</td><td>Split 2</td><td><a href="https://drive.google.com/file/d/1HflBCTgJ_BgnnfWdgv4LxMH6g2OBKCsx/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
         <tr><td>7</td><td>Revision 1</td><td><a href="https://drive.google.com/file/d/1pEn6GjBwVtWn7wz6N9q5MN8ZV-X_Ezao/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>8</td><td>Revision 2</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>9</td><td>Model Examination</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>10</td><td>Pre-Board Examination</td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
-        <tr><td>11</td><td><b>BOARD EXAMINATION</b></td><td><a href="nofile.html" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>8</td><td>Revision 2</td><td><a href="https://drive.google.com/file/d/1C0LFk3f3duWxs_nwC5WGloSUmegDNtpk/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>9</td><td>Model Examination</td><td><a href="https://drive.google.com/file/d/1IKp8ZnFrQev8-ZxDra7Er0PVjKqDpt2b/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>10</td><td>Pre-Board Examination</td><td><a href="https://drive.google.com/file/d/14Swnzvw7M4LpGl6fIbxY-phMpaCTZYcE/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
+        <tr><td>11</td><td><b>BOARD EXAMINATION</b></td><td><a href="https://drive.google.com/file/d/1JyQXnwIMVcSFKpfhbnIUPOIB9XXx_u-x/view?usp=drive_link" target="_blank">Open</a></td><td>80</td></tr>
       </tbody>
     </table>
   </div>
